# DSI-BuildSoftSummative

./: CONDUCT.md  README.md  TEST.md  pyproject.toml  setup.py
Analysis/: analysis.py
configs/: bad_config.yml  job_config.yml  system_config.yml  user_config.yml
demo/: beforeComputePlot.py  beforeComputeSendDone.py  beforeDataLoadCompute.py  customPath.py  customPathNotExist.py  demo.py
demo/configs/: job2_config.yml  job_config.yml  system_config.yml  user_config.yml
src/dsiBuildSoftSummative/: Analysis.py
src/dsiBuildSoftSummative/Analysis/: Analysis.py
src/dsiBuildSoftSummative/configs/: bad_config.yml  system_config.yml
test/: test_analysis.py
